 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Release 0.16.1 - Unreleased

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4945: Update document for conflicting macro params (knoguchi via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-4935: TEZ_USE_CLUSTER_HADOOP_LIBS is always set to true (rohini)

PIG-4961: CROSS followed by LIMIT inside nested foreach drop data from result (rohini)

PIG-4960: Split followed by order by/skewed join is skewed in Tez (rohini)

PIG-4947: LOAD with HBaseStorage using a mix of pure wildcards and prefixed wildcards results in
  empty maps for the pure wildcarded column families (daijy)

PIG-4948: Pig on Tez AM use too much memory on a small cluster (daijy)

PIG-4942: Fix mvn-install ant target (petersla via daijy)

PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)

PIG-4950: Fix minor issues with running scripts in non-local FileSystems (petersla via daijy)

Release 0.16.0

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4719: Documentation for PIG-4704: Customizable Error Handling for Storers in Pig (daijy)

PIG-4714: Improve logging across multiple components with callerId (daijy)

PIG-4885: Turn off union optimizer if there is PARALLEL clause in union in Tez (rohini)

PIG-4894: Add API for StoreFunc to specify if they are write safe from two different vertices (rohini)

PIG-4884: Tez needs to use DistinctCombiner.Combine (rohini)

PIG-4874: Remove schema tuple reference overhead for replicate join hashmap (rohini)

PIG-4879: Pull latest version of joda-time (rohini)

PIG-4526: Make setting up the build environment easier (nielsbasjes via rohini)

PIG-4641: Print the instance of Object without using toString() (sandyridgeracer via rohini)

PIG-4455: Should use DependencyOrderWalker instead of DepthFirstWalker in MRPrinter (zjffdu via rohini)
